# agent-harness

./: .env.example  .gitignore  README.md  agent-harness.config.json  pyproject.toml  sample-data.txt
docs/: api-design.md  deployment-guide.md
harness/: __init__.py  __main__.py  main.py  mock_model.py  model.py  types.py  workspace.py
harness/agent/: __init__.py  detection.py  loop.py  retry.py
harness/agents/: __init__.py  registry.py  spawn.py  types.py
harness/background/: __init__.py  manager.py
harness/channels/: __init__.py  feishu.py  gateway.py  types.py
harness/commands/: __init__.py  agent.py  channel.py  context.py  cron.py  debug.py  dream.py  memory.py  plugin.py  rag.py  security.py  skill.py
harness/config/: __init__.py  init.py  loader.py  schema.py
harness/context/: __init__.py  compact_tool.py  compressor.py  defense.py  prompt_builder.py  prompt_pipes.py  tool_output.py  view.py
harness/cron/: __init__.py  parser.py  service.py  store.py  types.py
harness/memory/: __init__.py  automation.py  search.py  store.py  types.py  validator.py
harness/plugins/: __init__.py  manager.py  supabase_plugin.py  types.py
harness/rag/: __init__.py  chunker.py  embedder.py  search.py  sqlite_store.py  store.py
harness/security/: __init__.py  bash_classifier.py  hooks.py  roles.py
sample-project/: api.py  auth.py  utils.py
tests/: test_agent.py  test_config.py  test_curriculum.py  test_main.py  test_memory_session.py  test_rag.py  test_registry.py  test_review_fixes.py  test_runtime.py  test_skill.py  test_usage_context.py
(+33 files in other folders)
